--- a/Forgot-pass.html
+++ b/Forgot-pass.html
@@ -20,7 +20,7 @@
 <body class="body">
     <div class="wrapper">
         <header>Reset Passward</header>
-        <form action="https://coffeebucks.w3spaces.com/Login.html">
+        <form action="Login.html">
             <div class="field password">
                 <div class="input-area">
                     <input type="password" placeholder="Password" minlength="8" maxlength="14" id="passward"
@@ -39,7 +39,7 @@
                 </div>
                 <div class="error error-txt">Password can't be blank</div>
             </div>
-            <a href="https://coffeebucks.w3spaces.com/Login.html">
+            <a href="Login.html">
                 <input type="submit" value="Update Passward"></a>
         </form>
     </div>
