--- a/CoffeeBucks_HomePage.html
+++ b/CoffeeBucks_HomePage.html
@@ -116,11 +116,11 @@
             </button>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
-                <a href="file:///C:/Users/ksiuser/Desktop/CoffeeBucks/HomePage/CoffeeBucks%20HomePage.html">Home</a>
-                <a href="file:///C:/Users/ksiuser/Desktop/CoffeeBucks/About/about.html">About</a>
+                <a href="CoffeeBucks_HomePage.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="book.html">Product</a>
                 <a href="testimonial.html">Contact</a>
-                <a href="file:///C:/Users/ksiuser/Desktop/CoffeeBucks/Login/Login.html">Login</a>
+                <a href="Login.html">Login</a>
               </div>
             </div>
           </div>
