--- a/Register_coffeeBucks.html
+++ b/Register_coffeeBucks.html
@@ -21,7 +21,7 @@
     <div class="wrapper">
         <header>Registration Form</header>
         <form id="form" name="submitform" onSubmit='return postToGoogle();' autocomplete="off"
-            action="https://coffeebucks.w3spaces.com/Login.html" method="POST">
+            action="Login.html" method="POST">
             <div class="field email">
                 <div class="input-area">
                     <input class="whsOnd zHQkBf" type="text" placeholder="Email Address" name="email" id="email"
@@ -41,10 +41,9 @@
                 </div>
                 <div class="error error-txt">Password can't be blank</div>
             </div>
-            <div class="pass-txt"><a href="https://coffeebucks.w3spaces.com/forgot-pass.html">Forgot password?</a></div>
             <input type="submit" value="Creat Account" onclick="openpopup()">
         </form>
-        <div class="sign-txt">Already have an account? <a href="https://coffeebucks.w3spaces.com/Login.html">Login
+        <div class="sign-txt">Already have an account? <a href="Login.html">Login
                 now</a></div>
 
         <div class="popupmsg" id="popupmsg">
